// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSolidDataset returns a SolidDataset representing the fetched Turtle 1`] = `
Object {
  "graphs": Object {
    "default": Object {
      "https://arbitrary.pod/resource": Object {
        "predicates": Object {
          "http://www.w3.org/1999/02/22-rdf-syntax-ns#type": Object {
            "namedNodes": Array [
              "http://xmlns.com/foaf/0.1/PersonalProfileDocument",
            ],
          },
          "http://xmlns.com/foaf/0.1/maker": Object {
            "namedNodes": Array [
              "https://arbitrary.pod/resource#me",
            ],
          },
          "http://xmlns.com/foaf/0.1/primaryTopic": Object {
            "namedNodes": Array [
              "https://arbitrary.pod/resource#me",
            ],
          },
        },
        "type": "Subject",
        "url": "https://arbitrary.pod/resource",
      },
      "https://arbitrary.pod/resource#me": Object {
        "predicates": Object {
          "http://www.w3.org/1999/02/22-rdf-syntax-ns#type": Object {
            "namedNodes": Array [
              "http://xmlns.com/foaf/0.1/Person",
            ],
          },
          "http://www.w3.org/2006/vcard/ns#fn": Object {
            "literals": Object {
              "http://www.w3.org/2001/XMLSchema#string": Array [
                "Vincent",
              ],
            },
          },
        },
        "type": "Subject",
        "url": "https://arbitrary.pod/resource#me",
      },
    },
  },
  "internal_resourceInfo": Object {
    "contentLocation": undefined,
    "contentType": "text/turtle",
    "isRawData": false,
    "linkedResources": Object {},
    "location": undefined,
    "sourceIri": "https://arbitrary.pod/resource",
  },
  "type": "Dataset",
}
`;

exports[`getWellKnownSolid returns the contents of .well-known/solid for the given resource (1.1) 1`] = `
Object {
  "graphs": Object {
    "default": Object {
      "_:b0": Object {
        "predicates": Object {
          "http://inrupt.com/ns/ess#consentIssuer": Object {
            "namedNodes": Array [
              "https://consent.pod.inrupt.com",
            ],
          },
          "http://inrupt.com/ns/ess#notificationGatewayEndpoint": Object {
            "namedNodes": Array [
              "https://notification.pod.inrupt.com",
            ],
          },
          "http://inrupt.com/ns/ess#powerSwitchEndpoint": Object {
            "namedNodes": Array [
              "https://pod.inrupt.com/powerswitch/username",
            ],
          },
          "http://www.w3.org/ns/pim/space#storage": Object {
            "namedNodes": Array [
              "https://pod.inrupt.com/username/",
            ],
          },
        },
        "type": "Subject",
        "url": "_:b0",
      },
    },
  },
  "internal_resourceInfo": Object {
    "contentLocation": undefined,
    "contentType": "application/ld+json",
    "isRawData": false,
    "linkedResources": Object {},
    "location": undefined,
    "sourceIri": "https://example.org/pod/.well-known/solid",
  },
  "type": "Dataset",
}
`;

exports[`getWellKnownSolid returns the contents of .well-known/solid for the given resource (2.0) 1`] = `
Object {
  "graphs": Object {
    "default": Object {
      "_:n3-1006": Object {
        "predicates": Object {
          "http://www.w3.org/1999/02/22-rdf-syntax-ns#type": Object {
            "namedNodes": Array [
              "http://www.w3.org/ns/solid/terms#DiscoveryDocument",
            ],
          },
          "http://www.w3.org/ns/auth/acl#trustedApp": Object {
            "namedNodes": Array [
              "https://podbrowser.inrupt.com/api/app",
            ],
          },
          "http://www.w3.org/ns/solid/terms#maxPodsPerOwner": Object {
            "literals": Object {
              "http://www.w3.org/2001/XMLSchema#integer": Array [
                "10",
              ],
            },
          },
          "http://www.w3.org/ns/solid/terms#notificationGateway": Object {
            "namedNodes": Array [
              "https://notification.inrupt.com/",
            ],
          },
          "http://www.w3.org/ns/solid/terms#provision": Object {
            "namedNodes": Array [
              "https://provision.inrupt.com/",
            ],
          },
          "http://www.w3.org/ns/solid/terms#validatesRdfSources": Object {
            "literals": Object {
              "http://www.w3.org/2001/XMLSchema#boolean": Array [
                "true",
              ],
            },
          },
        },
        "type": "Subject",
        "url": "_:n3-1006",
      },
    },
  },
  "internal_resourceInfo": Object {
    "contentLocation": undefined,
    "contentType": "text/turtle",
    "isRawData": false,
    "linkedResources": Object {},
    "location": undefined,
    "sourceIri": "",
  },
  "type": "Dataset",
}
`;
